Fix search input and search button missalignment (js disabled)
There is a screenshot of the bug in the bug report.

With the fix everything is aligned, but it is very hard to keep the search icon aligned to
the right without over complicating it. I think it is good enough.

I've posted a couple of screenshots on the trello card of how it looks.
More discussion at: https://trello.com/c/guJYIOhs

Bug: 72637

--- a/less/ui.less
+++ b/less/ui.less
@@ -87,8 +87,7 @@ body {
 	}
 
 	.fulltext-search {
-		margin: 0 .2em 0 .5em;
-		float: right;
+		margin: 0 3px 0 9px;
 	}
 }
 
@@ -123,9 +122,9 @@ body {
 /* Search */
 
 .client-nojs {
-	.search-box input.search {
-		// FIXME: This should not be necessary
-		width: 75%;
+	.header .search {
+		margin-right: -36px;
+		padding-right: 36px;
 	}
 }
 
